--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
-    <link rel="stylesheet" href="style.css"/>
-    <!-- Your code here! -->
+    <link rel="stylesheet" href="./style.css"/>
+  
   </head>
 
   <body>
@@ -22,7 +22,7 @@
 
       <p>All of the questions above deal with the aesthetic considerations of the page. These are the concerns of the presentation layer (CSS).</p>
       <p>As a contrast, let's consider the type of questions we might ask ourselves as we write HTML:</p>
-
+      
       <ul>
         <li class='perspective-questions'>Does the order of items within a list matter? Should it be a numbered list?</li>
         <li class='perspective-questions'>Should we wrap a list of links inside a navigation tag?</li>
